MIPS: host_detect_local_cpu, init ret with concat [PR112759]

The function `reconcat` cannot append string(s) to NULL,
as the concat process will stop at the first NULL.

Let's initialize `ret` with `concat (" ", NULL)`, then
it can be used by reconcat.

gcc/

	PR target/112759
	* config/mips/driver-native.cc (host_detect_local_cpu):
	initialize ret with concat, so that it can be used by
	reconcat later.